--- a/weirdo.css
+++ b/weirdo.css
@@ -650,6 +650,9 @@ body {
     .wave-emoji {
         font-size: 20px;
     }
+    .subtitle {
+        font-size: 10px;
+    }
 }
 
 /* Tweet Section */
