--- a/weirdo.css
+++ b/weirdo.css
@@ -678,7 +678,10 @@ body {
     }
     .intro-text {
         font-size: 13px;
-        padding: 0 16px;
+        padding: 0 8px;
+    }
+    .intro-separator {
+        margin: 16px 8px 0 8px;
     }
 }
 
