--- a/weirdo.css
+++ b/weirdo.css
@@ -628,8 +628,9 @@ body {
     font-size: 14px;
     color: var(--text-primary);
     margin-top: 16px;
-    text-align: left;
+    text-align: justify;
     line-height: 1.5;
+    margin: 16px -20px 0 -20px;
     padding: 0 20px;
 }
 
