--- a/weirdo.css
+++ b/weirdo.css
@@ -29,6 +29,16 @@
     --border-color: #eff3f4;
 }
 
+[data-theme="light"] body {
+    background-color: #ffffff;
+}
+
+@media (min-width: 768px) {
+    [data-theme="light"] body {
+        background-color: #ffffff;
+    }
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
     background-color: #000;
