--- a/weirdo.css
+++ b/weirdo.css
@@ -61,6 +61,10 @@ body {
         align-items: flex-start;
     }
     
+    [data-theme="light"] body {
+        background-color: #ffffff !important;
+    }
+    
     .container {
         box-shadow: 
             0 0 0 1px rgba(255, 255, 255, 0.1),
